--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "a3bcb729-cafc-47df-b351-c61ec7953f53"
 authors = ["Flemming Holtorf"]
 version = "0.1.0"
 
+[deps]
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
+
 [compat]
 julia = "1.6"
 
